# Synthetic-dataset-generation-for-machine-learning-models

./: CMakeLists.txt  README.md  package.xml
data/: test.record  train.record  train_labels.csv
launch/: image_grabber2.launch  st_camera.launch
src/: 3D_stiching.py  bounding_n_background.py  export_inference_graph.py  generate_tfrecord.py  record.cpp  set_model_state.py  stitching.py  stitching2.py  tide_detection.py  train.py  visualiser.cpp
tide_graph/: model.ckpt.index
training/: model.ckpt-0.index  model.ckpt-3584.index  object-detection.pbtxt  ssd_mobilenet_v1_pets.config
